--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "mongoose",
     "express"
   ],
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "engines": {
     "node": ">= 0.4.0"
     ,"mongoose": ">= 2.4.9"
+    ,"express3": ">= 3.x"
   },
   "license": "MIT",
   "dependencies": {
